@@ -67,7 +67,6 @@ export("bits.envelope")
 export("bits.test")
 export("blur")
 export("boyce")
-export("bw.abram")
 export("bw.abram.ppp")
 export("bw.CvL")
 export("bw.CvL.adaptive")
