@@ -21,6 +21,12 @@ SIGNIFICANT USER-VISIBLE CHANGES
     o cbind.fv, bind.fv
     Additional arguments may be functions in the R language.
 
+DELETED FUNCTIONS
+
+    o bw.abram
+    The generic 'bw.abram' has been moved
+    to the new package 'spatstat.univar'.
+    
     o CDF, CDF.density
     The generic 'CDF' and method 'CDF.density' have been moved
     to the new package 'spatstat.univar'.
